--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@ramonak/react-progress-bar": "^5.0.3",
     "@react-spring/parallax": "^9.7.3",
     "@react-spring/web": "^9.7.3",
